fixed navbar #brand font. removed name from footer ul and played with word-wrap

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,14 @@
 */
 
 /* GLOBAL styling*/
-nav {
+.nav {
   font-family: 'Spectral', serif;
 
+}
+
+.navbar-brand {
+  font-weight: bold;
+  font-family: 'Indie Flower', cursive;
 }
 
 body {
@@ -23,6 +28,7 @@ footer {
 
 footer ul {
   list-style: none;
+  word-wrap: normal;
 }
 
 footer button {
